--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,16 +6,22 @@
 	<!-- Delete media -->
 	<string name="delete_message_files">Files will be deleted from album, but still in your device.</string>
 	<string name="delete_message_files_original">Files will be deleted from device, and cannot be recovered.</string>
+	<string name="delete_message_media_set">Albums will be deleted from device, but still in your device.</string>
+	<string name="delete_message_media_set_original">Albums will be deleted from device, and cannot be recovered.</string>
 	<string name="delete_message_photos">Photos will be deleted from album, but still in your device.</string>
 	<string name="delete_message_photos_original">Photos will be deleted from device, and cannot be recovered.</string>
 	<string name="delete_message_videos">Videos will be deleted from album, but still in your device.</string>
 	<string name="delete_message_videos_original">Videos will be deleted from device, and cannot be recovered.</string>
 	<string name="delete_message_title_deleting_files" formatted="false">Deleting %d files</string>
+	<string name="delete_message_title_deleting_media_set" formatted="false">Deleting album %s</string>
+	<string name="delete_message_title_deleting_media_sets" formatted="false">Deleting %d albums</string>
 	<string name="delete_message_title_deleting_photo">Deleting 1 photo</string>
 	<string name="delete_message_title_deleting_photos" formatted="false">Deleting %d photos</string>
 	<string name="delete_message_title_deleting_video">Deleting 1 video</string>
 	<string name="delete_message_title_deleting_videos" formatted="false">Deleting %d videos</string>
 	<string name="delete_message_title_files" formatted="false">Delete %d files?</string>
+	<string name="delete_message_title_media_set" formatted="false">Delete album %s?</string>
+	<string name="delete_message_title_media_sets" formatted="false">Delete %d albums?</string>
 	<string name="delete_message_title_photo">Delete 1 photo?</string>
 	<string name="delete_message_title_photos" formatted="false">Delete %d photos?</string>
 	<string name="delete_message_title_video">Delete 1 video?</string>
